# advent2022

./: .gitignore  build.gradle.kts  pyproject.toml
advent2022/: day11.py  test_day11.py
src/main/kotlin/: Main.kt
src/main/kotlin/com/ericrochester/advent2022/: Day01.kt  Day02.kt  Day03.kt  Day04.kt  Day05.kt  Day06.kt  Day07.kt  Day08.kt  Day09.kt  Day10.kt  Day11.kt  DayRuns.kt  text.kt
src/test/kotlin/: TestMain.kt
src/test/kotlin/com/ericrochester/advent2022/: TestDay01.kt  TestDay02.kt  TestDay03.kt  TestDay04.kt  TestDay05.kt  TestDay06.kt  TestDay07.kt  TestDay08.kt  TestDay09.kt  TestDay10.kt  TestDay11.kt
