[tool.poetry]
name = "advent2022"
version = "0.1.0"
description = "Working on Advent of Code 2022."
authors = ["Eric Rochester <erochest@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
